fix: update swagger documentation
fix: update ws response to include processed/no processed files
